# otus-1

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  local.env.example  postman_collection.json  pre-commit-config.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: bb1f2a31c2c7_.py
src/: consts.py  dependencies.py  errors.py  types.py
src/api/: models.py  routes.py
src/app/: lifespan.py  runner.py  settings.py
src/repositories/: __init__.py  base.py  models.py  tables.py  tokens.py  user.py
src/services/: __init__.py  generate_user_id.py  password_hashing.py
tests/: alembic.py  conftest.py  factories.py
tests/e2e/: test_get_by_id.py  test_login.py  test_register.py
