[project]
name = "otus-highload"
version = "0.1.0"
description = "Project for training in the development of highload system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "uuid-extension>=0.2.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "testcontainers>=4.14.0",
    "httpx>=0.28.1",
    "uvloop>=0.22.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy-utils>=0.42.1",
    "yarl>=1.22.0",
    "faker>=40.1.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "--cov-report=term-missing:skip-covered"
